# RustyCSV

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  checksum-Elixir.RustyCSV.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
bench/: comprehensive_bench.exs  csv_bench.exs  decode_bench.exs  encode_bench.exs  standalone_encode_bench.exs
bench/results/: BENCHMARK_RESULTS.md
docs/: ARCHITECTURE.md  BENCHMARK.md  COMPLIANCE.md
lib/: rusty_csv.ex
lib/rusty_csv/: native.ex  nimble.ex  streaming.ex
native/rustycsv/: Cargo.toml  Cross.toml
native/rustycsv/benches/: encode_bench.rs
native/rustycsv/src/: lib.rs  resource.rs  term.rs
native/rustycsv/src/core/: field.rs  mod.rs  newlines.rs  scanner.rs  simd_index.rs  simd_scanner.rs
native/rustycsv/src/strategy/: direct.rs  encode.rs  encoding.rs  general.rs  mod.rs  parallel.rs  streaming.rs  two_phase.rs  zero_copy.rs
native/rustycsv/tests/: conformance.rs
sandbox/: IMPLEMENTATION_PLAN.md  README.md  bench_headers.exs  bench_interning.exs  bench_quick.exs  bench_scale.exs  bench_threshold.exs  bench_threshold2.exs  edge_cases.exs  full_diff.exs  mix.exs  parity_check.exs
test/: concurrent_access_test.exs  csv_spectrum_test.exs  custom_newline_test.exs  edge_cases_test.exs  encoding_test.exs  formula_encoding_test.exs  headers_test.exs  multi_byte_escape_test.exs  multi_byte_separator_test.exs  multi_separator_test.exs  native_separator_test.exs  nimble_csv_compat_test.exs  property_test.exs  rfc4180_test_data_test.exs  rusty_csv_test.exs  streaming_safety_test.exs
(+4 files in other folders)
