[package]
name = "rustycsv"
version = "0.1.0"
authors = ["Jeff Huen"]
edition = "2021"

[lib]
name = "rustycsv"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
memchr = "2.7"    # Fast byte searching, uses SIMD when available
rayon = "1.10"    # Data parallelism for parallel parsing

[features]
default = []
# NIF version features for rustler_precompiled (OTP 24+ = 2.15, OTP 26 = 2.16, OTP 27+ = 2.17)
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
